--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/react-stripe-js": "^1.9.0",
     "@stripe/stripe-js": "^1.32.0",
     "framer-motion": "^6.4.1",
+    "graphql": "^16.5.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
